# meowctx

./: Cargo.toml  README.md
src/: lib.rs  mcp_server.rs  mcp_server_builder.rs  mcp_server_tool.rs  mcp_server_tool_property.rs  openapi_mcp_property_conversion.rs  openapi_server.rs  openapi_spec_generation.rs
src/types/: jsonrpc_message.rs  mod.rs  openapi.rs
src/types/mcp/: capabilities.rs  content.rs  implementation_info.rs  mod.rs  paginated_request_message_paramas.rs  tool_info.rs
src/types/mcp/messages/: call_tool.rs  initialize.rs  list_prompts.rs  list_resource_templates.rs  list_resources.rs  list_roots.rs  list_tools.rs  mod.rs  ping.rs
src/utils/: mod.rs  string_capitalizable.rs
