[package]
name = "meowctx"
version = "0.0.1"
edition = "2024"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.anyhow]
version = "1.0.98"

[dependencies.axum]
version = "0.8.4"
features = ["http2"]
optional = true

[dependencies.tower-http]
version = "0.6.6"
features = ["cors", "auth"]
default-features = false

[dependencies.tower]
version = "0.5.2"
default-features = false

[dependencies.tokio]
version = "1.47.1"
optional = true

[features]
default = ["openapi-server"]
openapi-server = ["dep:axum", "dep:tokio"]